kubernetes/k3s-01/workloads/dawarich/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dawarich
  namespace: dawarich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dawarich
  template:
    metadata:
      labels:
        app: dawarich
    spec:
      containers:
        - name: dawarich
          image: docker.io/freikin/dawarich:1.15.3@sha256:589e3606b11b61c3fa2d9661832cb73645a9b93a9cc7d807a071e2bc6c584498
          command:
            - "web-entrypoint.sh"
          args:
            - "bin/rails"
            - "server"
            - "-p"
            - "3000"
            - "-b"
            - "::"
          volumeMounts:
            - name: dawarich
              mountPath: /var/app/public
              subPath: public/
            - name: dawarich
              mountPath: /var/app/tmp/imports/watched
              subPath: watched/
            - name: dawarich
              mountPath: /var/app/storage
              subPath: storage/
      volumes:
        - name: dawarich
          persistentVolumeClaim:
            claimName: dawarich
