kubernetes/k3s-01/workloads/dawarich/ingress-route.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dawarich
  namespace: dawarich
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dawarich.47fc5c.com`)
      kind: Rule
      services:
        - name: dawarich
          kind: Service
          port: 3000
          scheme: http
          sticky:
            cookie:
              httpOnly: true
              secure: true
              sameSite: none
  tls:
    secretName: dawarich-certificate
